complete week 5 assignment 2

--- a/coursera/ml-regression/assignments/week-5-lasso-assignment-2-blank.ipynb
+++ b/coursera/ml-regression/assignments/week-5-lasso-assignment-2-blank.ipynb
@@ -624,14 +624,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from math import *\n",
     "def lasso_cyclical_coordinate_descent(feature_matrix, output, initial_weights, l1_penalty, tolerance):\n",
-    "    "
+    "    weights = list(initial_weights)\n",
+    "    stop = False\n",
+    "    while not stop:\n",
+    "        maxChange = 0\n",
+    "        for i in range(len(weights)):\n",
+    "            old_weights_i = weights[i]\n",
+    "            weights[i] = lasso_coordinate_descent_step(i, feature_matrix, output, weights, l1_penalty)\n",
+    "            change = abs(weights[i] - old_weights_i)\n",
+    "            if change > maxChange:\n",
+    "                maxChange = change\n",
+    "        if maxChange < tolerance:\n",
+    "            stop = True\n",
+    "    \n",
+    "    return weights"
    ]
   },
   {
@@ -643,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -665,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -684,14 +698,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "weights = lasso_cyclical_coordinate_descent(normalized_simple_feature_matrix, output,\n",
     "                                            initial_weights, l1_penalty, tolerance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.63049248148e+15\n",
+      "[21624998.366362907, 63157246.785454214, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rss(predictions, output):\n",
+    "    df = predictions - output\n",
+    "    return np.dot(df, df)\n",
+    "\n",
+    "print rss(predict_output(normalized_simple_feature_matrix, weights), output)\n",
+    "print weights"
    ]
   },
   {
@@ -719,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -737,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -767,12 +806,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(feature_matrix, output) = get_numpy_data(train_data, all_features, my_output)\n",
+    "(normalized_feature_matrix, norms) = normalize_features(feature_matrix) # normalize features\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -783,12 +825,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[24429600.609333143, 0.0, 0.0, 48389174.352279775, 0.0, 0.0, 3317511.1627198141, 7329961.9848964009, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "constant\n",
+      "sqft_living\n",
+      "view\n"
+     ]
+    }
+   ],
+   "source": [
+    "tolerance = 1\n",
+    "l1_penalty = 1e7\n",
+    "initial_weights = np.zeros(1+len(all_features))\n",
+    "weights1e7 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)\n",
+    "features_inc_constant = all_features[:]\n",
+    "features_inc_constant.insert(0, 'constant')\n",
+    "print initial_weights\n",
+    "print weights1e7\n",
+    "for i in range(len(weights1e7)):\n",
+    "    if abs(weights1e7[i]) > l1_penalty/2.0:\n",
+    "        print features_inc_constant[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -810,12 +877,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[71114625.752809376, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "constant\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty = 1e8\n",
+    "tolerance=1\n",
+    "weights1e8 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)\n",
+    "print weights1e8\n",
+    "for i in range(len(weights1e8)):\n",
+    "    if abs(weights1e8[i]) > l1_penalty/2.0:\n",
+    "        print features_inc_constant[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -835,12 +920,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[77779073.912652329, -22884012.250233572, 15348487.08089995, 92166869.698830754, -2139328.0824277941, -8818455.544094909, 6494209.7331065554, 7065162.0505319797, 4119079.2100676359, 18436483.526187755, -14566678.545143463, -5528348.751794273, -83591746.207305461, 2784276.460128583]\n",
+      "constant\n",
+      "bedrooms\n",
+      "bathrooms\n",
+      "sqft_living\n",
+      "sqft_lot\n",
+      "floors\n",
+      "waterfront\n",
+      "view\n",
+      "condition\n",
+      "grade\n",
+      "sqft_above\n",
+      "sqft_basement\n",
+      "yr_built\n",
+      "yr_renovated\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty = 1e4\n",
+    "tolerance=5e5\n",
+    "weights1e4 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output,\n",
+    "                                            initial_weights, l1_penalty, tolerance)\n",
+    "print weights1e4\n",
+    "for i in range(len(weights1e4)):\n",
+    "    if abs(weights1e4[i]) > l1_penalty/2.0:\n",
+    "        print features_inc_constant[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -888,12 +1004,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "161.317456248\n",
+      "[  1.85285533e+05   0.00000000e+00   0.00000000e+00   1.61317456e+02\n",
+      "   0.00000000e+00   0.00000000e+00   2.87664700e+05   6.91937057e+04\n",
+      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
+      "   0.00000000e+00   0.00000000e+00]\n",
+      "[ 539366.62822135       0.               0.               0.               0.\n",
+      "       0.               0.               0.               0.               0.\n",
+      "       0.               0.               0.               0.        ]\n",
+      "[  5.89912924e+05  -4.97435039e+04   5.17044250e+04   3.07261390e+02\n",
+      "  -3.67765574e-01  -4.32048893e+04   5.63119400e+05   6.66940353e+04\n",
+      "   8.99767715e+03   1.80569342e+04  -5.60846894e+01  -7.88384489e+01\n",
+      "  -3.21603081e+02   5.18531810e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalized_weights1e7 = weights1e7 / norms\n",
+    "normalized_weights1e8 = weights1e8 / norms\n",
+    "normalized_weights1e4 = weights1e4 / norms\n",
+    "print normalized_weights1e7[3]\n",
+    "print normalized_weights1e7\n",
+    "print normalized_weights1e8\n",
+    "print normalized_weights1e4\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -922,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -940,30 +1083,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "275962079909185.38"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cal_rss(feature_matrix, weights, output):\n",
+    "    return rss(predict_output(feature_matrix, weights), output)\n",
+    "\n",
+    "cal_rss(test_feature_matrix, normalized_weights1e7, test_output)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "537166150034084.88"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_rss(test_feature_matrix, normalized_weights1e8, test_output)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "227781004760225.38"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_rss(test_feature_matrix, normalized_weights1e4, test_output)"
+   ]
   },
   {
    "cell_type": "markdown",
