--- a/coursera/ml-classification/assignments/module-8-boosting-assignment-2-blank.ipynb
+++ b/coursera/ml-classification/assignments/module-8-boosting-assignment-2-blank.ipynb
@@ -2223,6 +2223,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# No"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
