finishing the new assignment

--- a/coursera/ml-clustering-and-retrieval/assignments/2_kmeans-with-text-data_blank.ipynb
+++ b/coursera/ml-clustering-and-retrieval/assignments/2_kmeans-with-text-data_blank.ipynb
@@ -43,11 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A newer version of GraphLab Create (v2.1) is available! Your current version is v1.9.\n",
+      "\n",
+      "You can use pip to upgrade the graphlab-create package. For more information see https://dato.com/products/create/upgrade.\n",
+      "2016-08-07 23:25:11,488 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.9 started. Logging: /tmp/graphlab_server_1470583508.log\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to jinntrance@gmail.com and will expire on September 27, 2016.\n"
+     ]
+    }
+   ],
    "source": [
     "import graphlab\n",
     "import matplotlib.pyplot as plt\n",
@@ -79,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -172,11 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<59071x547979 sparse matrix of type '<type 'numpy.float64'>'\n",
+       "\twith 10379283 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf_idf"
    ]
@@ -221,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -316,11 +346,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.41000789  1.36894636]\n",
+      " [ 1.40935215  1.41023886]\n",
+      " [ 1.39855967  1.40890299]\n",
+      " ..., \n",
+      " [ 1.41108296  1.39123646]\n",
+      " [ 1.41022804  1.31468652]\n",
+      " [ 1.39899784  1.41072448]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import pairwise_distances\n",
     "\n",
@@ -349,22 +393,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Students should write code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "# Students should write code here\n",
+    "top3_queries = tf_idf[0:3,:]\n",
+    "top3_dist = pairwise_distances(tf_idf, top3_queries, metric='euclidean')\n",
+    "dist = top3_dist[430, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "'''Test cell'''\n",
     "if np.allclose(dist, pairwise_distances(tf_idf[430,:], tf_idf[1,:])):\n",
@@ -386,22 +441,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Students should write code here"
+    "# Students should write code here\n",
+    "distances = top3_dist\n",
+    "closest_cluster = np.argmin(top3_dist, axis = 1)\n",
+    "closest_cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "'''Test cell'''\n",
     "reference = [list(row).index(min(row)) for row in distances]\n",
@@ -420,22 +497,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Students should write code here"
+    "# Students should write code here\n",
+    "cluster_assignment = closest_cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass\n"
+     ]
+    }
+   ],
    "source": [
     "if len(cluster_assignment)==59071 and \\\n",
     "   np.array_equal(np.bincount(cluster_assignment), np.array([23061, 10086, 25924])):\n",
@@ -1580,7 +1666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
