--- a/coursera/ml-clustering-and-retrieval/assignments/2_kmeans-with-text-data_blank.ipynb
+++ b/coursera/ml-clustering-and-retrieval/assignments/2_kmeans-with-text-data_blank.ipynb
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -2680,10 +2680,10 @@
     {
      "data": {
       "text/plain": [
-       "100"
+       "35"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2692,7 +2692,8 @@
     "print cluster_assignment[100]()\n",
     "#np.bincount(cluster_assignment)\n",
     "total = cluster_assignment[100]()\n",
-    "np.bincount(total)"
+    "bc = np.bincount(total)\n",
+    "bc[bc < 236].size"
    ]
   },
   {
